--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "wouter": "^3.7.1"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.5.1",
